Added 'browse mode', Removed NIO usage from legacy